--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="registration">
                 <h3>Class 10th (Mathematics)</h3>
                 <p><a href="https://docs.google.com/forms/d/1M0GdrL3hyWyHBrRiuO5EoQYxcprvIMX4OY4UflVzTCo/"
-                        target="_blank">Register Now</a></p>
+                        >Register Now</a></p>
             </div>
         </div>
 
@@ -54,17 +54,17 @@
             <h1 class="heading">Our Courses</h1>
             <div class="courses-wrapper">
 
-                <a href="https://www.youtube.com/watch?v=lyJh4Z3q_lg&list=PLV-GHo2QP5IiEwHJTB9Y8jiUEiGdXjrsc"
-                    class="course-link" target="_blank">
+                <a href=""
+                    class="course-link" >
                     <div class="course-item">
                         <div class="img-wrapper">
                             <img src="./img/quantitative-bg.jpg" alt="">
                         </div>
-                        <h1 class="text-blue">Complete Quantitative Aptitude Course in Hindi</h1>
+                        <h1 class="text-blue">Complete Quantitative Aptitude Course</h1>
                         <p class="desc text-grey">In this complete course you will learn every concepts of Quantitative
                             Aptitude with suitable examples.</p>
                         <i class="fas fa-chalkboard-teacher fa-3x text-darkblue"></i>
-                        <p class="author text-darkblue">Instructor : Kaushal Kumar Soni</p>
+                        <p class="author text-darkblue">Instructor : Rakesh roshan</p>
                     </div>
                 </a>
                 <a href="#" class="course-link">
@@ -72,26 +72,40 @@
                         <div class="img-wrapper">
                             <img src="./img/reasoning-bg.jpg" alt="">
                         </div>
-                        <h1 class="text-blue">Complete Reasoning Aptitude Course in Hindi(Coming Soon)</h1>
+                        <h1 class="text-blue">Complete Reasoning Aptitude Course</h1>
                         <p class="desc text-grey">In this complete course you will learn every concepts of Reasoning
                             with suitable examples.</p>
                         <i class="fas fa-chalkboard-teacher fa-3x text-darkblue"></i>
-                        <p class="author text-darkblue">Instructor : Kaushal Kumar Soni</p>
+                        <p class="author text-darkblue">Instructor : Aryan mishra</p>
                     </div>
                 </a>
 
-                <a href="https://www.youtube.com/watch?v=w32ILSGMAC0&list=PLV-GHo2QP5IixOWQ2CX9HnY7WA_HDRaFQ"
-                    class="course-link" target="_blank">
+                <a href=""
+                    class="course-link" >
                     <div class="course-item">
                         <div class="img-wrapper">
                             <img src="./img/corona.png" alt="">
                         </div>
-                        <h1 class="text-blue">Complete Playlist on Corona Virus in Hindi</h1>
+                        <h1 class="text-blue">Complete Playlist on Corona Virus</h1>
                         <p class="desc text-grey">In this complete playlist you will know all about Corona Virus, where
                             and how it originated, what are the different precautions that must be taken in order to be
                             safe form this virus.</p>
                         <i class="fas fa-chalkboard-teacher fa-3x text-darkblue"></i>
-                        <p class="author text-darkblue">Instructor : Kaushal Kumar Soni & Manish Kumar Soni</p>
+                        <p class="author text-darkblue">Instructor : CHINA</p>
+                    </div>
+                </a>
+
+
+                <a href=""
+                    class="course-link" >
+                    <div class="course-item">
+                        <div class="img-wrapper">
+                            <img src="./img/pc.jpg" alt="">
+                        </div>
+                        <h1 class="text-blue">Complete Playlist on PC building skill</h1>
+                        <p class="desc text-grey">In this complete playlist you will know all about custom PC buildups and something something</p>
+                        <i class="fas fa-chalkboard-teacher fa-3x text-darkblue"></i>
+                        <p class="author text-darkblue">Instructor : Linus tech tip</p>
                     </div>
                 </a>
 
